[Android Webapp] Always navigate as a result of clients#openWindow()

This CL makes webapps always navigate as a result of
clients#openWindow()
In particular:
- The CL moves WebApkConstants#EXTRA_WEBAPK_FORCE_NAVIGATION to
ShortcutHelper
- Sets the extra in ServiceTabLauncher#launchTab() for webapps

BUG=744843

Change-Id: I98465c1f8773a705dc7177792256d901bf9aa6bc